# NeuroCell

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/: MoleculeBehaviou_0.demo
Assets/Molecules/: ADP.asset  ATP.asset  CO2.asset  Cholesterol.asset  Glucose.asset  H2O.asset  HO2.asset  Hemoglobin.asset  Insulin.asset  Oxygen.asset  Ribosome.asset  Triglyceride.asset  UnprocessedCholesterol.asset  UnprocessedHemoglobin.asset  mRNA.asset  preproinsulin.asset
Assets/Prefabs/: Circle.prefab  DNA.prefab  GolgiApparatus.prefab  NucleusSegment.prefab  Segment.prefab  Target.prefab  phospholipid.prefab
Assets/Scenes/: MainMenu.unity  NeuroCell.unity  Training.unity
Assets/Scripts/: Agents.cs  GolgiApparatus.cs  Membrane.cs  MembraneCreator.cs  Mitochondrion.cs  Molecule.cs  MoleculeManager.cs  Nucleus.cs  RegionManager.cs  SpriteSwitcher.cs  Tail.cs  TrackRigidody2D.cs
Assets/demos/: MoleculeBehaviou_1.demo  mbehdem.demo
Demonstrations/: MoleculeBehaviou.demo  MoleculeBehaviou_2.demo  MoleculeBehaviou_3.demo  MoleculeBehaviou_4.demo  MoleculeBehaviou_5.demo  fastdem.demo  fastdem1.demo  fastdem2.demo  fastdem3.demo  fastdem4.demo
ProjectSettings/: EditorBuildSettings.asset  Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
config/: MoleculeBehaviour.yaml
results/imitiation/: MoleculeBehaviour.onnx  configuration.yaml
results/imitiation1/: configuration.yaml
results/imitiation2/: configuration.yaml
results/imitiation3/: MoleculeBehaviour.onnx  configuration.yaml
results/imitiation4/: MoleculeBehaviour.onnx  configuration.yaml
(+200 files in other folders)
